@@ -10,6 +10,7 @@ date Version 3.00.50 (RC3)
 * FS#236 - "include path for XPM Data incorrect."
 ^ All paths are now generated with '/' as a separator.
 * Secondary bitmaps of wxBitmapButton are now only generated to XRC if they are used.
+* The "select" property of notebook pages now corresponds to "selected" in XRC.
 
 09/06/2007 Version 3.00.49 (RC2)
 * wxStdDialogButtonSizer events now Connect() to the button, instead of the parent.
